fix alignment issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -111,3 +111,7 @@ pubtit {
     padding-top: 5rem;
   }
 }
+
+.well {
+   height: 250px;
+}
